# OpenOTP

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .env.postgres  .env.postgres.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260415_0001_initial_schema.py  20260415_0002_delivery_status_fields.py
app/: main.py
app/api/: client_ip.py  deps.py
app/api/routes/: metrics.py  otp.py  webhooks.py
app/cli/: cleanup.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: otp.py
app/observability/: metrics.py  middleware.py
app/schemas/: otp.py  webhook.py
app/services/: cleanup_service.py  otp_service.py  rate_limit.py  redis_client.py  webhook_service.py
app/services/sms/: __init__.py  base.py  console.py  failover.py  twilio.py
app/utils/: phone.py
deploy/compose/: docker-compose.prod.yml  docker-compose.yml
docker/: Caddyfile  entrypoint.sh
docs/: README.md  api.md  architecture.md  deploy.md  operations.md  security.md  testing.md
examples/env/: .env.docker.example  .env.production.example
scripts/: init-env.sh
tests/: test_otp_flow.py
