[project]
name = "openotp"
version = "0.1.0"
description = "OpenOTP: production-minded SMS OTP backend with application-owned controls."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "phonenumbers>=8.13.0,<9.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "twilio>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
